--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
 
 	display: flex;
 	align-items: center;
-	background-image: url("https://i.ibb.co/mqRd79r/Exterior-Main-HERO.jpg");
+	background-image: url("../img/Exterior-Main-Hero.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 
