--- a/css/styles.css
+++ b/css/styles.css
@@ -1,63 +1,51 @@
-body {
-	background-color: ;
-	font-family: 'Montserrat', sans-serif;
+/* variables */
+/* Navbar */
+.navbar .navbar-nav .nav-link {
+  color: #ff8300;
+}
+.navbar .navbar-nav .nav-link.active {
+  color: #2ec4b6;
 }
 
-.jumbotron-fluid {
+/* Jumbotron */
+.jumbotron {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  background-color: #011627;
+}
+.jumbotron .container {
+  z-index: 1;
+  color: white;
+}
+.jumbotron .container h1 {
+  color: #ff8300;
+  font-weight: 800;
+  font-size: 5rem;
+  margin-bottom: 2rem;
+}
+.jumbotron .container .btn {
+  background-color: #ff8300;
+  color: white;
+}
+.jumbotron .container a.btn {
+  background-color: #2ec4b6;
+}
 
-	height: 70vh;
-
-	display: flex;
-	align-items: center;
-	background-image: url("../img/Exterior-Main-Hero.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-
-	}
-
-h1 {
-	color: #ffffff;
-	font-weight: bold;
-	font-size: 50px;
-
+.body {
+  background-color: #fdfffc;
+  font-family: Roboto, sans-serif;
 }
 
 h2 {
-	color: #7F4B98;
-
+  color: #ff8300;
+  font-size: 3rem;
+  font-weight: 500;
+  text-transform: uppercase;
 }
 
-.lead {
-	color: #ffffff;
+badge-pil {
+  background-color: #2ec4b6;
 }
 
-
-#about-section {
-	color: #ffffff;
-}
-
-
-#event-speakers {
-	color: #ffffff;
-}
-
-#learn h3 {
-	color: #ffffff;
-}
-
-#presented-by {
-	color: #7F4B98;
-}
-
-.badge-pill {
-	background-color: #7F4B98;
-}
-
-#about-nvc {
-	color: #ffffff;
-}
-
-.#button-style { 
-	background-color: #7F4B98;
-	color: #ffffff;
- }
+/*# sourceMappingURL=styles.css.map */
